ja code enhance

--- a/training/challenge.html
+++ b/training/challenge.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="challenge.css">
 </head>
 <body>
-    <div id="box">Open the box!</div>
+    <div id="container"></div>
     <script src="challenges.js"></script>
 </body>
 </html>
