--- a/training/challenge.html
+++ b/training/challenge.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="challenge.css">
 </head>
 <body>
-    <div id="container"></div>
+    <p id="welcome-el"></p>
     <script src="challenges.js"></script>
 </body>
 </html>
